dark mode icons added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <button type="button" id="theme-switch"></button>
     <section >
         <div class="container">
             <header class="header-converter">
